--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "tailwindcss": "^3.3.3",
         "vite": "^4.4.9",
         "vite-plugin-laravel": "^0.3.1"
+    },
+    "dependencies": {
+        "dropzone": "^6.0.0-beta.2"
     }
 }
